--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "homepage": "https://github.com/create3000/x3d-traverse#readme",
   "devDependencies": {
     "jest": "^29.7.0",
-    "x_ite": "^10.5.10"
+    "x_ite-node": "^1.0.3"
   }
 }
