--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "x_ite-node": "^1.0.3"
+  },
+  "dependencies": {
+    "x_ite": "^10.5.10"
   }
 }
