--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "scripts": {
     "dist": "node build/dist.js",
     "prerelease": "npm run dist",
-    "release": "node/build/release.js",
-    "pretest": "npm run dist",
+    "release": "node build/release.js",
     "test": "jest"
   },
   "repository": {
