--- a/package.json
+++ b/package.json
@@ -46,9 +46,7 @@
     "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
+    "x_ite": "^11.0.0",
     "x_ite-node": "^1.0.16"
-  },
-  "dependencies": {
-    "x_ite": "^10.5.14"
   }
 }
