--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dist": "node build/dist.js",
     "prerelease": "npm run dist",
     "release": "node build/release.js",
+    "pretest": "npm run dist",
     "test": "jest"
   },
   "repository": {
